--- a/index.html
+++ b/index.html
@@ -46,27 +46,27 @@
     <!------------ 🎥 VIDEOS ------------>
 
     <div id="videoPanel"
-         class="hidden md:flex overflow-hidden w-[calc(100vw-2rem)] md:h-auto md:w-[30vw] relative md:fixed top-4 left-4 md:right-4 md:left-auto justify-center items-center aspect-[16/9] rounded-xl transition-all z-10 mb-4">
+         class="md:flex overflow-hidden w-[calc(100vw-2rem)] md:h-auto md:w-[30vw] relative md:fixed top-4 left-4 md:right-4 md:left-auto justify-center items-center aspect-[16/9] rounded-xl transition-all z-10 mb-4">
 
         <video id="videoWaiting" playsinline autoplay muted controls loop
                class="object-cover absolute z-20 w-full h-full rounded-xl transition-all duration-500"
                poster="media/videos/poster.jpg">
-            <source type="video/webm" src="media/videos/waiting.webm" />
-            <source type="video/mp4" src="media/videos/waiting.mp4" />
+            <source type="video/webm" src="media/videos/sol-wainting.webm" />
+            <source type="video/mp4" src="media/videos/sol-wainting.mp4" />
         </video>
 
         <video id="videoPresenting" playsinline controls
                class="object-cover absolute z-10 w-full h-full transition-opacity duration-[.8s] rounded-xl">
-            <source type="video/webm" src="media/videos/presenting.webm" />
-            <source type="video/mp4" src="media/videos/presenting.mp4" />
+            <source type="video/webm" src="media/videos/sol-presenting.webm" />
+            <source type="video/mp4" src="media/videos/sol-presenting.mp4" />
         </video>
 
     </div>
 
     <div id="photoFinish"
-         class="hidden relative top-4 left-4 z-30 h-[30vh] md:w-[30vw] md:h-fit md:fixed md:right-4 md:left-auto mb-4">
+         class="hidden relative top-4 left-4 z-30 h-[30vh] md:w-[20vw] md:h-fit md:fixed md:right-4 md:left-auto mb-4">
         <img src="media/ummm.JPG" alt="" class="h-full rounded-xl">
-        <span class="absolute bottom-0 p-2 text-xs text-white">Waiting 4 your e-mail...</span>
+        <span class="absolute bottom-0 p-2 text-xs text-white">Waiting for that e-mail...</span>
     </div>
 
 
@@ -86,7 +86,7 @@
                     Moreno is
                     a
                     <span
-                          id="isWhat"> web designer...</span>
+                          id="isWhat"> web designer and coder...</span>
                 </h1>
             </div>
 
