--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div id="photoFinish"
          class="hidden relative top-4 left-4 z-30 h-[30vh] md:w-[20vw] md:h-fit md:fixed md:right-4 md:left-auto mb-4">
         <img src="media/ummm.JPG" alt="" class="h-full rounded-xl">
-        <span class="absolute bottom-0 p-2 text-xs text-white">Waiting for that e-mail...</span>
+        <span class="absolute bottom-0 p-2 text-xs text-white">Waiting for that e-mail... I'm joking hehe</span>
     </div>
 
 
