--- a/vente-dobjets/index.html
+++ b/vente-dobjets/index.html
@@ -25,7 +25,7 @@
           <button class="pointer" onclick="nextObject()">≻</button>
      </div>
 
-     <!-- <button class="pointer" onclick="launchCamera()">voir en AR</button> -->
+     <button class="pointer" onclick="launchCamera()">voir en AR</button>
      <video autoplay id="video"></video>
 
 
