--- a/o/index.html
+++ b/o/index.html
@@ -4,7 +4,7 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>VENTE D'OBJETS</title>
+     <title>OBJETS À VENDRE</title>
      <link rel="stylesheet" href="style.css">
 </head>
 
