--- a/autre-temps/index.html
+++ b/autre-temps/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style_circle.css"></link>
-    <title>Autres Temps</title>
-  </head>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style_circle.css">
+  </link>
+  <title>Autres Temps</title>
+</head>
 
 <!--  <body onmousedown="mouseDown(event);" oncontextmenu="return false;">-->
 
- <body>
+<body>
 
-   <div class="back"></div>
+  <div class="back"></div>
 
   <div id="time">
     <span id="h"></span><span id="hh"></span>
@@ -22,12 +24,13 @@
     <span id="ms"></span><span id="msms"></span>
   </div>
 
-    <div class="data"></div>
+  <div class="data"></div>
 
-    <div class="topblack"></div>
-    <div class="bottomblack"></div>
+  <div class="topblack"></div>
+  <div class="bottomblack"></div>
 
-    <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 
-  </body>
+</body>
+
 </html>
