--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <!-- Primary Meta Tags -->
-    <title>pablo.energy</title>
+    <title>SUPER PABLO ENERGY</title>
     <meta name="title" content="Copa Alzár">
     <meta name="description"
           content="Pablo Moreno">
@@ -34,15 +34,6 @@
 
 <body class="bg-special-white">
 
-
-
-    <marquee behavior="" direction=""
-             class="fixed left-0 top-1/2 z-10 w-screen opacity-0 transition-all duration-[3s] ease-in-out">
-        <span class="text-base text-yellow-300 cursor-pointer textStroke hover:underline" id="studioAd"> (if
-            you are a web design studio based in Rotterdam, please click here!)</span>
-
-    </marquee>
-
     <!------------ 🎥 VIDEOS ------------>
 
     <div id="videoPanel"
@@ -50,15 +41,15 @@
 
         <video id="videoWaiting" playsinline autoplay muted controls loop
                class="object-cover absolute z-20 w-full h-full rounded-xl transition-all duration-500"
-               poster="media/videos/poster.jpg">
-            <source type="video/webm" src="media/videos/sol-wainting.webm" />
-            <source type="video/mp4" src="media/videos/sol-wainting.mp4" />
+               poster="media/videos/nunchak-poster.jpg">
+            <source type="video/webm" src="media/videos/nunchak-waiting.webm" />
+            <source type="video/mp4" src="media/videos/nunchak-wainting.mp4" />
         </video>
 
         <video id="videoPresenting" playsinline controls
                class="object-cover absolute z-10 w-full h-full transition-opacity duration-[.8s] rounded-xl">
-            <source type="video/webm" src="media/videos/sol-presenting.webm" />
-            <source type="video/mp4" src="media/videos/sol-presenting.mp4" />
+            <source type="video/webm" src="media/videos/nunchak-presenting.webm" />
+            <source type="video/mp4" src="media/videos/nunchak-presenting.mp4" />
         </video>
 
     </div>
