--- a/pab2ams/index.html
+++ b/pab2ams/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PABLO 2 AMS</title>
+    <title>PABLO IN AMSTERD🏠M</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -15,29 +15,49 @@
     <div class="carnet">
         <h2>PABLO 2 AMSTERD🏠M</h2>
 
-        <img src="pablo.png" alt="">
+        <div class="pablo">
 
-        Pablo is a just graduated spanish + french guy who start in september an internship in Amsterdam. He will do
-        design and websites and want to find cool people to live with. He's very polite and curious,
-        engaged and open-minded. Ready for aventures, he eats everything and really like to do things. Responsible
-        from a long date (boarding school at 13 - ouch), loving breakfast, he can share his french, spanish
-        and english! He need to move for 6 months (but can be less if he moves) from this september to the next
-        march. He's twenty-six years old, not here @sagesseastrale23.<br><br>Thanks !
+            <img src="pablo.png" alt="">
+        </div>
+
+        <p>
+
+            Pablo is a just graduated spanish + french guy who start in september an internship in Amsterdam. He will do
+            design and websites and want to find cool people to live with. He's very polite and curious,
+            engaged and open-minded. Ready for aventures, he eats everything and really like to do things. Responsible
+            from a long date (boarding school at 13 - ouch), loving breakfast, he can share his french, spanish
+            and english! He need to move for 6 months (but can be less if he moves) from this september to the next
+            march. He's twenty-six years old, not here @sagesseastrale23.<br><br>Thanks !
+
+        </p>
 
     </div>
 
     <div class="contacts">
-        <button>You have something for Pablo! 🤗</button>
-
+        <a href="https://www.instagram.com/sagesseastrale23/"><button>You have something for Pablo! 🤗</button></a>
+        <button onclick="goodLuck()">Wish him luck! 🍀💪</button>
     </div>
 
-    <div class="wish">
 
-        <textarea name="" id="" cols="30" rows="10"></textarea>
-        <button>You want to wish him luck! 🍀🧧</button>
-        <button>Send him this 💪 !!!</button>
-    </div>
+    <script>
 
+        var wishNumbers = 0;
+
+        function goodLuck() {
+            document.title = "thank you <3!!!"
+
+            wishNumbers++;
+            console.log(wishNumbers)
+
+            let luck = document.createElement("span");
+            luck.id = "luck";
+            luck.innerHTML = "+" + wishNumbers + "💪";
+
+            document.querySelector(".pablo").appendChild(luck)
+
+        }
+
+    </script>
 </body>
 
 </html>
