--- a/pablo-to-ams/index.html
+++ b/pablo-to-ams/index.html
@@ -31,8 +31,7 @@
             he's looking for a <u>room to rent</u>. He
             will do
             design and websites and want to find <u>cool people</u> to live with. He's very polite and curious,
-            engaged and open-minded. Ready for adventures, he eats everything and really like cinema and peanut
-            butter.
+            engaged and open-minded. Ready for adventures, he eats everything and really like cinema and skate.
             Independent
             from a long date (boarding school at 13 - outch), he shares <u>his good energy</u> in french,
             spanish
