--- a/pablo-to-ams/index.html
+++ b/pablo-to-ams/index.html
@@ -44,8 +44,8 @@
     </div>
 
     <div class="contacts">
-        <a href="https://www.instagram.com/sagesseastrale23/"><button>You can help him! 💡💌</button></a>
-        <button onclick="goodLuck()">Wish him luck! 🌠💪</button>
+        <a href="https://www.instagram.com/sagesseastrale23/"><button>You can help him! 💡</button></a>
+        <button onclick="goodLuck()">Wish him luck! 🌠</button>
     </div>
 
     <audio id="sound" src="alien.mp3" preload="auto"></audio>
