--- a/pablo-to-ams/index.html
+++ b/pablo-to-ams/index.html
@@ -48,7 +48,7 @@
         <button onclick="goodLuck()">Wish him luck! 🌠</button>
     </div>
 
-    <audio id="sound" src="alien.mp3" preload="auto"></audio>
+    <audio id="sound" src="twinklesparkle.mp3" preload="auto"></audio>
 
 
     <script>
