--- a/pablo-to-ams/index.html
+++ b/pablo-to-ams/index.html
@@ -32,7 +32,8 @@
             Independent
             from a long date (boarding school at 13 - outch), he shares <u>his good energy</u> in french,
             spanish
-            or english! He needs something for 6 months (but it can be less too) from September 24 to March 25. He's
+            or english! He needs something for 6 months (but it can be less too) from the September 2024 to March
+            2025. He's
             twenty-six years old, but loves even more the <u>23</u>.<br><br>Thanks,<br> and maybe see you!
 
         </p>
@@ -46,7 +47,7 @@
     </div>
 
     <audio id="sound" preload="auto">
-        <source src="marino-wahoo.mp3" type="audio/mpeg" />
+        <source src="thankyou.mp3" type="audio/mpeg" />
     </audio>
 
 
