--- a/pablo-to-ams/index.html
+++ b/pablo-to-ams/index.html
@@ -34,7 +34,8 @@
             spanish
             or english! He needs something for 6 months (but it can be less too) from the September 2024 to March
             2025. He's
-            twenty-six years old, but loves even more the <u>23</u>.<br><br>Thanks,<br> and maybe see you!
+            twenty-six years old, but will always have a <u>23</u> in is heart.<br><br>Thanks a lot,<br> and maybe see
+            you!
 
         </p>
 
