--- a/pablo-to-ams/index.html
+++ b/pablo-to-ams/index.html
@@ -107,7 +107,7 @@
 
             let luck = document.createElement("span");
             luck.id = "luck";
-            luck.innerHTML = "+" + wishNumbers + "🍀";
+            luck.innerHTML = "+" + wishNumbers + "💪";
 
 
             document.querySelector(".pablo").appendChild(luck)
