best for mobile

--- a/pablo-to-ams/index.html
+++ b/pablo-to-ams/index.html
@@ -14,10 +14,7 @@
 
     <div class="carnet">
         <div>
-            <div class="pablo">
-                <img src="pablo.JPG"
-                     alt="This guy called Pablo is in a train, smiling at the camera (becasue Maddalena took the picture) and he have a cap he found in some village, and his always present napkin.">
-            </div>
+
             <h2>PABL🔍 TO AMSTERD🏠M</h2>
 
         </div>
@@ -34,16 +31,19 @@
             spanish
             or english! He needs something for 6 months (but it can be less too) from the September 2024 to March
             2025. He's
-            twenty-six years old, but will always have a <u>23</u> in is heart.<br><br>Thanks a lot,<br> and maybe see
+            twenty-six years old, but will always have a <u>23</u> in his heart.<br><br>Thanks a lot,<br> and maybe see
             you!
 
         </p>
 
-
+        <div class="pablo">
+            <img src="pablo.JPG"
+                 alt="This guy called Pablo is in a train, smiling at the camera (becasue Maddalena took the picture) and he have a cap he found in some village, and his always present napkin.">
+        </div>
     </div>
 
     <div class="contacts">
-        <a href="https://www.instagram.com/sagesseastrale23/"><button>You can help him! 💡</button></a>
+        <a href="https://www.instagram.com/sagesseastrale23/"><button>You know something! 💡</button></a>
         <button onclick="goodLuck()">Wish him luck! 🍀</button>
     </div>
 
@@ -77,18 +77,12 @@
             "YellowGreen"
         ];
 
-        // Function to get a random color from the array
-        function getRandomColor() {
-            const randomIndex = Math.floor(Math.random() * cssColors.length);
-            return cssColors[randomIndex];
-        }
 
+        // document.addEventListener('DOMContentLoaded', (event) => {
+        //     const randomIndex = Math.floor(Math.random() * cssColors.length);
+        //     document.body.style.backgroundColor = cssColors[randomIndex];
+        // });
 
-        // Set the random color as the body's background color
-        document.addEventListener('DOMContentLoaded', (event) => {
-            const randomColor = getRandomColor();
-            document.body.style.backgroundColor = randomColor;
-        });
 
         var wishNumbers = 0;
 
