--- a/pablo-2-ams/index.html
+++ b/pablo-2-ams/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charsetUTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PABL🔍 TO AMSTERD🏠M</title>
+    <title>PABL🔍 2 AMSTERD🏠M</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -15,7 +15,7 @@
     <div class="carnet">
         <div>
 
-            <h2>PABL🔍 TO AMSTERD🏠M</h2>
+            <h2>PABL🔍 2 AMSTERD🏠M</h2>
 
         </div>
 
@@ -24,12 +24,12 @@
             internship in Amsterdam, and
             he's looking for a <u>room to rent</u>. He
             will do
-            design and websites and want to find <u>cool people</u> to live with. He's very polite and curious,
+            design and websites and wants to find <u>cool people</u> to live with. He's very polite and curious,
             engaged and open-minded. Ready for adventures, he eats everything and really like cinema and skate.
             Independent
             from a long date (boarding school at 13 - outch), he shares <u>his good energy</u> in french,
             spanish
-            or english! He needs something for 6 months (but it can be less too) from the September 2024 to March
+            or english! He needs this place for 6 months (but it can be less too) from the September 2024 to March
             2025. He's
             twenty-six years old, but will always have a <u>23</u> in his heart.<br><br>Thanks a lot,<br> and maybe see
             you!
