--- a/pablo-in-ams/index.html
+++ b/pablo-in-ams/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charsetUTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PABL🔍 2 AMSTERD🏠M</title>
+    <title>PABL🔍 in AMSTERD🏠M</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -15,7 +15,7 @@
     <div class="carnet">
         <div>
 
-            <h2>PABL🔍 2 AMSTERD🏠M</h2>
+            <h1>PABL🔍 in AMSTERD🏠M</h1>
 
         </div>
 
@@ -78,10 +78,10 @@
         ];
 
 
-        // document.addEventListener('DOMContentLoaded', (event) => {
-        //     const randomIndex = Math.floor(Math.random() * cssColors.length);
-        //     document.body.style.backgroundColor = cssColors[randomIndex];
-        // });
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const randomIndex = Math.floor(Math.random() * cssColors.length);
+            document.body.style.backgroundColor = cssColors[randomIndex];
+        });
 
 
         var wishNumbers = 0;
