--- a/pablo-in-ams/index.html
+++ b/pablo-in-ams/index.html
@@ -15,7 +15,7 @@
     <div class="carnet">
         <div>
 
-            <h1>PABL🔍 in AMSTERD🏠M</h1>
+            <h1>PABL🔍 in<br> AMSTERD🏠M</h1>
 
         </div>
 
@@ -32,7 +32,7 @@
             or english! He needs this place for 6 months (but it can be less too) from the September 2024 to March
             2025. He's
             twenty-six years old, but will always have a <u>23</u> in his heart.<br><br>Thanks a lot,<br> and maybe see
-            you!
+            you soon!
 
         </p>
 
