--- a/pablo-in-ams/index.html
+++ b/pablo-in-ams/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="contacts">
-        <a href="https://www.instagram.com/sagesseastrale23/"><button>You know something! 💡</button></a>
+        <a href="https://www.instagram.com/sagesseastrale23/"><button>You can help him! 🔥</button></a>
         <button onclick="goodLuck()">Wish him luck! 🍀</button>
     </div>
 
