--- a/100-balles-pour-julie/index.html
+++ b/100-balles-pour-julie/index.html
@@ -24,11 +24,8 @@
             transform: translate(-50%, -50%);
             z-index: 99;
 
-            gap: 8px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            width: 100%;
+            text-align: center;
         }
 
         button {
@@ -41,7 +38,8 @@
         #tunes {
             display: none;
             text-shadow: 0 0 5px white;
-
+            width: 100%;
+            text-align: center;
         }
 
         .wahooo {
