--- a/100-balles-pour-julie/index.html
+++ b/100-balles-pour-julie/index.html
@@ -30,6 +30,8 @@
             width: -moz-max-content;
             width: max-content;
             padding: 4px 8px;
+            appearance: none;
+            -webkit-appearance: none !important;
         }
 
         #tunes {
