--- a/100-balles-pour-julie/index.html
+++ b/100-balles-pour-julie/index.html
@@ -30,8 +30,12 @@
             width: -moz-max-content;
             width: max-content;
             padding: 4px 8px;
-            appearance: none;
-            -webkit-appearance: none !important;
+            /* -webkit-appearance: none !important; */
+            border: 1px solid #8f8f9d;
+            background-color: #e9e9ed;
+            border-radius: 4px;
+            color: black;
+
         }
 
         #tunes {
