--- a/100-balles-pour-julie/index.html
+++ b/100-balles-pour-julie/index.html
@@ -15,6 +15,14 @@
 
             font-family: Arial, Helvetica, sans-serif;
             font-size: 22px;
+            scrollbar-width: none;
+
+        }
+
+        body::-webkit-scrollbar {
+            width: 0px;
+            background: transparent;
+            /* Disable scrollbar Chrome/Safari/Webkit */
         }
 
         .infos {
