--- a/sites.html
+++ b/sites.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔗 Websites by Pablo Moreno (a.k.a pablo⚡️)</title>
+    <title>🔗 Websites by Pablo Moreno</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
