--- a/pablo-in-ams/index.html
+++ b/pablo-in-ams/index.html
@@ -20,17 +20,17 @@
         </div>
 
         <p>
-            Pablo is a just graduated spanish + french guy who starts on <u>September 16<sup>th</sup></u> an
-            internship in Amsterdam, and
-            he's looking for a <u>room to rent</u>. He
-            will do
-            design and websites and wants to find <u>cool people</u> to live with. He's very polite and curious,
-            engaged and open-minded. Ready for adventures, he eats everything and really like cinema and skate.
+            Pablo is a young <u>spanish + french</u> guy who moved to Amsterdam in September! He works
+            on a design agency in the center, and he's looking for a <u>room for this current year</u>. He's very polite
+            and
+            curious,
+            engaged and open-minded. Ready for adventures, he eats everything and really like cinema (Cineville pass in
+            his pocket) and skate.
             Independent
-            from a long date (boarding school at 13 - outch), he shares <u>his good energy</u> in french,
+            from a long date (boarding school at 13 - outch), he shares <u>good energy</u> in french,
             spanish
-            or english! He needs this place for 6 months (but it can be less too) from the September 2024 to March
-            2025. He's
+            or english! He plans to stay in 'Dam for the rest of the year, and move to Rotterdam next year to stay with
+            his friends. He's
             twenty-six years old, but will always have a <u>23</u> in his heart.<br><br>Thanks a lot,<br> and maybe see
             you soon!
 
