--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p class="contact">
 
                 <script
-                        type="text/javascript">var email = "pablomoreno", domain = "proton.me", text = "email"; document.write("<a href=javascript:location='" + "mail" + "to:" + email + "@" + domain + "' class=''>" + text + "</a>");</script>
+                        type="text/javascript">var email = "pablomoreno", domain = "proton.me", text = "e-mail"; document.write("<a href=javascript:location='" + "mail" + "to:" + email + "@" + domain + "' class=''>" + text + "</a>");</script>
 
                 <a href="https://www.instagram.com/sagesseastrale23/">insta</a>
 
